fix: update next.js to latest version to resolve security vulnerability

--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "date-fns": "^4.1.0",
     "drizzle-orm": "^0.44.7",
     "lucide-react": "^0.462.0",
-    "next": "16.0.1",
+    "next": "^16.0.7",
     "next-auth": "5.0.0-beta.30",
     "nextjs-toploader": "^3.9.17",
     "nodemailer": "^7.0.10",
@@ -47,8 +47,8 @@
     "pdfkit": "^0.17.2",
     "pg": "^8.12.0",
     "posthog-js": "^1.298.1",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "react-hook-form": "^7.51.5",
     "react-signature-canvas": "1.1.0-alpha.2",
     "resend": "^2.1.0",
